# mcp-device-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  config.py  main.py  server.py
src/devices/: __init__.py  audio.py  camera.py  preview.py  printer.py  screen.py  storage.py  usb.py
