[project]
name = "mcp-device-server"
version = "1.0.0"
description = "An MCP server that provides peripheral device interaction capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.4.0",
    "mss>=10.0.0",
    "numpy>=2.2.6",
    "opencv-python>=4.8.0",
    "pyaudio>=0.2.14",
    "python-ffmpeg>=2.0.12",
    "screeninfo>=0.8.1",
]
